--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -3,8 +3,28 @@
     "type": "shell",
     "tasks": [
         {
+            "label": "Generate Docs",
+            "command": "cd docs && make doc",
+        },
+        {
             "label": "Create Environment",
-            "command": "sh ${workspaceFolder}/scripts/create_environment.sh",
+            "command": "poetry install",
+        },
+        {
+            "label": "Build Library",
+            "command": "poetry build",
+        },
+        {
+            "label": "Publish Library",
+            "command": "poetry publish",
+        },
+        {
+            "label": "Run Tests",
+            "command": "poetry run pytest",
+        },
+        {
+            "label": "Generate requirements.txt",
+            "command": "poetry export --output requirements.txt",
         }
     ]
 }
