--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,18 @@
 [tool.poetry]
-name = "template"
+name = "my-package"
 version = "0.1.0"
-description = ""
+description = "Brief description of the package"
 authors = ["Your Name <you@example.com>"]
+readme = "README.md"
+license = "MIT"
+homepage = "https://example.com/"
+repository = "https://github.com/example/"
+include = [
+    "LICENSE",
+]
+packages = [
+    {include = "mypack"}
+]
 
 [tool.poetry.dependencies]
 python = "*"
